syntax = "proto3";

package orderpb;

option go_package = "desafio_clean_architecture/internal/infra/grpc/pb/orderpb";

message Order {
  string id = 1;
  string product = 2;
  float price = 3;
  string created_at = 4;
}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message CreateOrderRequest {
  string id = 1;
  string product = 2;
  float price = 3;
  string created_at = 4;
}

message CreateOrderResponse {
  string id = 1;
  string product = 2;
  float price = 3;
  float final_price = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
